--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <iframe 
       src="https://buzzing-lopsided-oven.anvil.app"
       style="
-      	width:400px;
-      	height:100%;
+      	width:100%;
+      	height:625px;
       	margin-top: -80px;
       "
     </iframe> 
