--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       style="
       	width:100%;
       	height:625px;
-      	margin-top: -30px;
+      	margin-top: -80px;
+        border: 0;
       "
     </iframe> 
     </div>
