--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       src="https://buzzing-lopsided-oven.anvil.app"
       style="
       	width:100%;
-      	height:100%;
+      	height:100% -80px;
       	margin-top: -80px;
         border: 0;
       "
