--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <script src="https://anvil.works/embed.js" async></script>
     <div>
       <iframe 
-      src="https://buzzing-lopsided-oven.anvil.app"
+      src="https://skeletal-mature-aardvark.anvil.app"
       style="
-      	width:400px;
-      	height:100%;
+      	width:100%;
+      	height:795px;
       	margin-top: -80px;
+        border: 0;
       "
     </iframe> 
     </div>
