--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://anvil.works/embed.js" async></script>
     <div>
       <iframe 
-      src="https://satisfied-defenseless-style.anvil.app
+      src="https://satisfied-defenseless-style.anvil.app"
       style="
       	width:100%;
       	height:800px;
